# codetrust-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODETRUST.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  architecture.md  package-lock.json  package.json  pyproject.toml  start.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
app/api/proof/[...path]/: route.ts
app/api/tnoc/[...path]/: route.ts
backend/: .dockerignore  .env.example  Dockerfile  compose.demo.yaml  compose.yaml  pyproject.toml
backend/config/: policy.json  ran-demo.json  tools.sandbox.json
backend/deploy/: otel-collector.yaml
backend/deploy/helm/tnoc-changeguard/: Chart.yaml  values.yaml
backend/deploy/helm/tnoc-changeguard/templates/: _helpers.tpl  configmap.yaml  deployments.yaml  hpa.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
backend/evals/: README.md  adjudicator.jsonl  benchmark_policy.py  intelligence_expectations.json
backend/examples/events/: stadium-event-fallback.json
backend/examples/incidents/: 01-ran-capacity-congestion.json  02-credential-stuffing-attack.json
backend/examples/sandbox/: ran-capacity-congestion.json
backend/migrations/: env.py
backend/migrations/versions/: 20260716_0001_initial.py
backend/prompts/: adjudicator.md  change_history.md  planner.md  security.md  telemetry.md  topology.md
backend/src/tnoc/: __init__.py  agent_mission.py  api.py  bus.py  db.py  demo.py  domain.py  evals.py  intelligence_proof.py  llm.py  migrate.py  model_runtime.py  observability.py  outbox.py  proof_api.py  proof_domain.py  proof_sources.py  rag.py  ran_demo.py  repository.py  sandbox.py  security.py  settings.py  tools.py  worker.py  workflow.py
backend/tests/: test_model_runtime.py  test_proof_api.py  test_proof_sources.py  test_ran_demo.py  test_safety.py  test_sandbox.py
candidate/: __init__.py
candidate/migrations/: 20260714_add_reconciliation.sql
candidate/payments/: __init__.py  reconcile.py
candidate/tests/: test_reconcile.py
docs/: ARCHITECTURE.md  BEGINNER_DEMO_GUIDE.md  DEMO_RESULTS.md  DRAFT_PR_WORKFLOW.md  JUDGE_QA.md  PLAN.md  POC_GUIDE.md  RESEARCH.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  TALENT_HACK_STRATEGY.md  gemini-proof.md  how-changeguard-works.md  operations.md  threat-model.md
src/codetrust/: __init__.py  agent.py  cli.py  diff_parser.py  github.py  llm.py  models.py  report.py  repository_scope.py  rules.py  run_store.py  scope.py  ui.py  web.py
tests/: rendered-html.test.mjs  test_agent.py  test_cli.py  test_diff_parser.py  test_github.py  test_llm.py  test_repository_scope.py  test_rules.py  test_run_store.py  test_start.py  test_web.py
