[project]
name = "tnoc-changeguard"
version = "0.2.0"
description = "Event-aware evidence-gated change assurance for telecom operations"
requires-python = ">=3.12"
dependencies = [
  "aiokafka>=0.12.0",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "jsonschema>=4.23.0",
  "langchain>=1.0.0",
  "langchain-google-genai>=4.0.0",
  "langchain-openai>=1.0.0",
  "langgraph>=1.0.0",
  "langgraph-checkpoint-postgres>=3.0.0",
  "openai>=2.0.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.34.0",
  "opentelemetry-instrumentation-fastapi>=0.55b0",
  "opentelemetry-instrumentation-httpx>=0.55b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.55b0",
  "opentelemetry-sdk>=1.34.0",
  "orjson>=3.10.0",
  "prometheus-client>=0.21.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "pyjwt[crypto]>=2.10.0",
  "qdrant-client>=1.13.0",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "structlog>=25.1.0",
  "tenacity>=9.0.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
  "types-jsonschema>=4.23.0",
]

[project.scripts]
tnoc-api = "tnoc.api:run"
tnoc-worker = "tnoc.worker:run"
tnoc-outbox = "tnoc.outbox:run"
tnoc-eval = "tnoc.evals:run"
tnoc-migrate = "tnoc.migrate:run"
tnoc-sandbox = "tnoc.sandbox:run"
tnoc-demo = "tnoc.demo:run"
tnoc-proof-sources = "tnoc.proof_sources:run"
tnoc-intelligence-proof = "tnoc.intelligence_proof:run"
tnoc-proof-api = "tnoc.proof_api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tnoc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["B008", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiokafka", "aiokafka.*", "opentelemetry.instrumentation.*"]
ignore_missing_imports = true
